Add supplementary content and make corrections to the Arrow Flight SQL documentation.